练习热修复tinker，问题：debug版本能修复，release版本不能，正在找原因

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.gxg.demo8.mydemo8">
 
     <application
+        android:name=".tinker.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".tinker.TinkerTestActivity"></activity>
     </application>
 
 </manifest>
