--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 
         buildConfigField "String", "MESSAGE", "\"I am the base apk\""
         buildConfigField "String", "TINKER_ID", "\"${getTinkerIdValue()}\""
-        buildConfigField "String", "PLATFORM",  "\"all\""
+        buildConfigField "String", "PLATFORM", "\"all\""
     }
     buildTypes {
         release {
@@ -71,23 +71,49 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
 
     //注解UI
-    compile 'com.jakewharton:butterknife:7.0.1'
-
 
     //可选，用于生成application类
-    provided('com.tencent.tinker:tinker-android-anno:1.8.0')
     //tinker的核心库
-    compile('com.tencent.tinker:tinker-android-lib:1.8.0')
     //分包库  下面用得到
+
+    //rxjava+retrofit+okhttp
+    //retrofit
+    //Gson 库
+//下面两个是RxJava 和RxAndroid
+    //转换器，请求结果转换成Model
+
+    //配合Rxjava 使用
+
+    testCompile 'junit:junit:4.12'
+    provided 'com.tencent.tinker:tinker-android-anno:1.8.0'
+
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.tencent.tinker:tinker-android-lib:1.8.0'
     compile 'com.android.support:multidex:1.0.1'
 
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.33'
+
+//glide相关
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+
+
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
 
 }
+
+
 def gitSha() {
     try {
         String gitRev = 'git rev-parse --short HEAD'.execute(null, project.rootDir).text.trim()
@@ -338,7 +364,7 @@ if (buildWithTinker()) {
     }
 
     List<String> flavors = new ArrayList<>();
-    project.android.productFlavors.each {flavor ->
+    project.android.productFlavors.each { flavor ->
         flavors.add(flavor.name)
     }
     boolean hasFlavors = flavors.size() > 0
