--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gxg.demo8.mydemo8">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".tinker.MyApp"
         android:allowBackup="true"
@@ -17,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tinker.TinkerTestActivity"></activity>
+        <activity android:name=".tinker.TinkerTestActivity" />
+        <activity android:name=".rxjava_retrofit_okhttp.HttpTestActivity"></activity>
     </application>
 
 </manifest>
