--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,56 +61,38 @@ android {
         main {
             res.srcDir "src/main/res";
             res.srcDir "src/main/res/tinker";
-            jniLibs.srcDirs = ['libs'];
+            res.srcDir "src/main/res/tagcloudview";
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-    //注解UI
-
-    //可选，用于生成application类
-    //tinker的核心库
-    //分包库  下面用得到
-
-    //rxjava+retrofit+okhttp
-    //retrofit
-    //Gson 库
-//下面两个是RxJava 和RxAndroid
-    //转换器，请求结果转换成Model
-
-    //配合Rxjava 使用
-
-    testCompile 'junit:junit:4.12'
-    provided 'com.tencent.tinker:tinker-android-anno:1.8.0'
-
+    compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.tencent.tinker:tinker-android-lib:1.8.0'
     compile 'com.android.support:multidex:1.0.1'
-
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.33'
-
-//glide相关
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-
-
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    //    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
+    testCompile 'junit:junit:4.12'
+    provided 'com.tencent.tinker:tinker-android-anno:1.8.0'
+    compile project(':tagcloudlib')
 }
 
 
