--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gxg.demo8.mydemo8">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".tinker.MyApp"
@@ -20,7 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".tinker.TinkerTestActivity" />
-        <activity android:name=".rxjava_retrofit_okhttp.HttpTestActivity"></activity>
+        <activity android:name=".rxjava_retrofit_okhttp.HttpTestActivity" />
+        <activity android:name=".smartRefresh.SmartrefreshActivity"></activity>
+        <activity android:name=".tagcloudview.TagCloudViewActivity"/>
+        <activity android:name=".tagcloudview.FragmentTestActivity"/>
     </application>
 
 </manifest>
