圆形百分比控件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
         </activity>
         <activity android:name=".tinker.TinkerTestActivity" />
         <activity android:name=".rxjava_retrofit_okhttp.HttpTestActivity" />
-        <activity android:name=".smartRefresh.SmartrefreshActivity"></activity>
+        <activity android:name=".smartRefresh.SmartrefreshActivity"/>
         <activity android:name=".tagcloudview.TagCloudViewActivity"/>
         <activity android:name=".tagcloudview.FragmentTestActivity"/>
+        <activity android:name=".customaccelerateball.CustomAccelerateBallActivity"/>
     </application>
 
 </manifest>
