--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.tencent.tinker.patch'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.3"
 
     //recommend
     dexOptions {
@@ -62,6 +62,7 @@ android {
             res.srcDir "src/main/res";
             res.srcDir "src/main/res/tinker";
             res.srcDir "src/main/res/tagcloudview";
+            res.srcDir "src/main/res/customaccelerateball";
         }
     }
 }
