--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ android {
             res.srcDir "src/main/res/tinker";
             res.srcDir "src/main/res/tagcloudview";
             res.srcDir "src/main/res/customaccelerateball";
+            res.srcDir "src/main/res/androidgausspager";
         }
     }
 }
