--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".tagcloudview.FragmentTestActivity"/>
         <activity android:name=".customaccelerateball.CustomAccelerateBallActivity"/>
         <activity android:name=".androidgausspager.AndroidgausspagerActivity"/>
+        <activity android:name=".taobaoprogressbar.CustomProgressBarActivity"/>
     </application>
 
 </manifest>
