--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,8 +92,10 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    compile 'com.github.zhaokaiqiang.klog:library:1.6.0'
     //    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'
     testCompile 'junit:junit:4.12'
     provided 'com.tencent.tinker:tinker-android-anno:1.8.0'
