--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".taobaoprogressbar.CustomProgressBarActivity"/>
         <activity android:name=".zidingyidialog.DialogTestActivity"/>
         <activity android:name=".lottie.LottieActivity"/>
+        <activity android:name=".rxjavatest.RxJavaTestActivity"/>
     </application>
 
 </manifest>
